--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-social-icons": "^4.1.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
