--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-social-icons": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
