--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mern Demo",
   "main": "server.js",
   "engine": {
-    "node": "12.x"
+    "node": "12.16.1"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
